chore(ci): update macOS-windows-binding build

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -218,6 +218,7 @@ jobs:
         with:
           node-version: ${{ matrix.node }}
           cache: yarn
+          architecture: ${{ matrix.settings.architecture }}
       - name: Install dependencies
         run: yarn install
       - name: Download artifacts
